--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
 				</configuration>
 			</plugin>
 			
-			
+			<plugin>
 			<groupId>org.jacoco</groupId>
 	<artifactId>jacoco-maven-plugin</artifactId>
 	<version>0.8.6</version>
@@ -165,7 +165,7 @@
 			</goals>
 		</execution>
 	</executions>
-			
+		</plugin>	
 			
 			
 </plugins>
